# repairbox

./: .gitignore  INSPECTION_CHECKLISTS.md  MANIFEST.in  README.md  create_sample_repair.py  prompt  pyproject.toml  recreate_workspace.py  setup.py  verify_charts.py
repairbox/: hooks.py  install.py  modules.txt
repairbox/config/: desktop.py
repairbox/public/css/: repairbox.css
repairbox/repairbox/: sample_data.py  verification.py
repairbox/repairbox/dashboard_chart/monthly_revenue/: monthly_revenue.json
repairbox/repairbox/dashboard_chart/repairs_by_status/: repairs_by_status.json
repairbox/repairbox/doctype/brand/: brand.json  brand.py  test_brand.py
repairbox/repairbox/doctype/defect/: defect.json  defect.py  test_defect.py
repairbox/repairbox/doctype/device/: device.json  device.py  test_device.py
repairbox/repairbox/doctype/device_inspection_item/: device_inspection_item.json  device_inspection_item.py
repairbox/repairbox/doctype/inspection_checklist_item/: inspection_checklist_item.json  inspection_checklist_item.py
repairbox/repairbox/doctype/inspection_checklist_template/: inspection_checklist_template.json  inspection_checklist_template.py  test_inspection_checklist_template.py
repairbox/repairbox/doctype/quick_reply/: quick_reply.json  quick_reply.py  test_quick_reply.py
repairbox/repairbox/fixtures/: README.md  inspection_checklist_template.json  kanban_board.json  quick_reply.json  repair_priority.json  repair_status.json
repairbox/setup/: install.py
repairbox/translations/: ar.csv  fr.csv
(+18 files in other folders)
